@@ -1,3 +1,8 @@
+2003-04-10  Bruno Haible  <bruno@clisp.org>
+
+	* eaccess.m4: New file.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2003-04-06  Bruno Haible  <bruno@clisp.org>
 
 	* relocatable.m4 (AC_RELOCATABLE_NOP): New macro.
